Tailwind class sorter

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
 	"tabWidth": 4,
 	"printWidth": 120,
 	"singleQuote": false,
-	"semi": true
+	"semi": true,
+
+	"plugins": ["prettier-plugin-tailwindcss"]
 }
