--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -35,3 +35,27 @@ jobs:
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+
+  gitops-dev:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+        with:
+          repository: stamford-syntax-club/infra
+          fetch-depth: 0
+          token: ${{ secrets.WORKFLOW_TOKEN }}
+
+      - name: create and checkout new branch
+        run: |
+          git checkout -b deploy/frontend-${GITHUB_SHA}
+
+      - name: change image tag
+        run: |
+          git config user.name "syntax-bot"
+          git config user.email "syntax@bot.com"
+          sed -i -E "s/ghcr.io\/stamford-syntax-club\/stamfordcenter-frontend.*$/ghcr.io\/stamford-syntax-club\/stamfordcenter-frontend:${GITHUB_SHA}/" stamfordcenter/docker-compose.dev.yaml
+          git add stamfordcenter/docker-compose.dev.yaml
+          git commit -m "🤖 change docker image version to ${GITHUB_SHA}"
+          git push origin deploy/frontend-${GITHUB_SHA}
