--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -2,7 +2,7 @@ name: Dev Environment CI/CD
 
 on:
   push:
-    branches: [main]
+    branches: [main, test-ci]
 
 jobs:
   build-and-push:
@@ -35,3 +35,36 @@ jobs:
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+
+  gitops-dev:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+        with:
+          repository: stamford-syntax-club/infra
+          persist-credentials: false
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: config git
+        run: |
+          git --version
+          git config user.name "syntax-bot"
+          git config user.email "syntax@bot.com"
+
+      - name: change image tag
+        run: |
+          sed -i -E "s/ghcr.io\/stamford-syntax-club\/stamfordcenter-frontend.*$/ghcr.io\/stamford-syntax-club\/stamfordcenter-frontend:${GITHUB_SHA}/" stamfordcenter/docker-compose.dev.yaml
+          git add stamfordcenter/docker-compose.dev.yaml
+          git checkout -b deploy/frontend
+          git commit -m "🤖 change docker image version to ${GITHUB_SHA}"
+          git push origin deploy/frontend
+
+      - name: open pull request for merging
+        uses: vsoch/pull-request-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH_PREFIX: "deploy/"
+          PULL_REQUEST_BRANCH: "main"
