migrate to Mantine V7

--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
 		"@emotion/server": "^11.11.0",
-		"@mantine/core": "^6.0.17",
-		"@mantine/dates": "^6.0.17",
-		"@mantine/form": "^6.0.17",
-		"@mantine/hooks": "^6.0.17",
-		"@mantine/modals": "^6.0.17",
-		"@mantine/next": "^6.0.17",
-		"@mantine/notifications": "^6.0.17",
-		"@mantine/nprogress": "^6.0.17",
-		"@mantine/spotlight": "^6.0.17",
+		"@mantine/core": "^7.0.0",
+		"@mantine/dates": "^7.0.0",
+		"@mantine/form": "^7.0.0",
+		"@mantine/hooks": "^7.0.0",
+		"@mantine/modals": "^7.0.0",
+		"@mantine/next": "^6.0.21",
+		"@mantine/notifications": "^7.0.0",
+		"@mantine/nprogress": "^7.0.0",
+		"@mantine/spotlight": "^7.0.0",
 		"@types/node": "20.4.5",
 		"@types/react": "18.2.18",
 		"@types/react-dom": "18.2.7",
@@ -28,7 +28,6 @@
 		"eslint": "8.46.0",
 		"eslint-config-next": "13.4.12",
 		"next": "13.4.12",
-		"postcss": "8.4.27",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.10.1",
@@ -37,6 +36,9 @@
 		"typescript": "5.1.6"
 	},
 	"devDependencies": {
+		"postcss": "^8.4.30",
+		"postcss-preset-mantine": "^1.7.0",
+		"postcss-simple-vars": "^7.0.1",
 		"prettier": "^3.0.0",
 		"prettier-plugin-tailwindcss": "^0.4.1"
 	}
