--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.11.0",
+		"sharp": "^0.32.6",
 		"swr": "^2.2.4",
 		"tailwindcss": "3.3.3",
 		"typescript": "5.2.2"
