--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
 		"dayjs": "^1.11.10",
 		"eslint": "8.50.0",
 		"eslint-config-next": "13.5.4",
+		"i18next": "^23.5.1",
 		"next": "13.5.4",
+		"next-i18next": "^14.0.3",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-i18next": "^13.3.0",
 		"react-icons": "^4.11.0",
 		"sharp": "^0.32.6",
 		"swr": "^2.2.4",
