--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -1,61 +1,61 @@
 name: Dev Environment CI/CD
 
 on:
-  push:
-    branches: [main]
+    push:
+        branches: [main]
 
 jobs:
-  build-and-push:
-    name: build and push docker image to ghcr
-    permissions:
-      packages: write
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    build-and-push:
+        name: build and push docker image to ghcr
+        permissions:
+            packages: write
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
 
-      - name: Setup SHA
-        run: echo "GITHUB_SHA=${GITHUB_SHA}" >> $GITHUB_ENV
+            - name: Setup SHA
+              run: echo "GITHUB_SHA=${GITHUB_SHA}" >> $GITHUB_ENV
 
-      - name: Login ghcr.io
-        uses: docker/login-action@v2.1.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{secrets.GITHUB_TOKEN}}
-          logout: true
+            - name: Login ghcr.io
+              uses: docker/login-action@v2.1.0
+              with:
+                  registry: ghcr.io
+                  username: ${{ github.actor }}
+                  password: ${{secrets.GITHUB_TOKEN}}
+                  logout: true
 
-      - name: Build and Push to GitHub Container Registry
-        uses: docker/build-push-action@v3.2.0
-        with:
-          context: .
-          tags: |
-            ghcr.io/stamford-syntax-club/stamfordcenter-frontend:${{ env.GITHUB_SHA }}
-          push: true
+            - name: Build and Push to GitHub Container Registry
+              uses: docker/build-push-action@v3.2.0
+              with:
+                  context: .
+                  tags: |
+                      ghcr.io/stamford-syntax-club/stamfordcenter-frontend:${{ env.GITHUB_SHA }}
+                  push: true
 
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+            - name: Image digest
+              run: echo ${{ steps.docker_build.outputs.digest }}
 
-  gitops-dev:
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    steps:
-      - name: checkout
-        uses: actions/checkout@v3
-        with:
-          repository: stamford-syntax-club/infra
-          fetch-depth: 0
-          token: ${{ secrets.WORKFLOW_TOKEN }}
+    gitops-dev:
+        runs-on: ubuntu-latest
+        needs: build-and-push
+        steps:
+            - name: checkout
+              uses: actions/checkout@v3
+              with:
+                  repository: stamford-syntax-club/infra
+                  fetch-depth: 0
+                  token: ${{ secrets.WORKFLOW_TOKEN }}
 
-      - name: create and checkout new branch
-        run: |
-          git checkout -b deploy/frontend-${GITHUB_SHA}
+            - name: create and checkout new branch
+              run: |
+                  git checkout -b deploy/frontend-${GITHUB_SHA}
 
-      - name: change image tag
-        run: |
-          git config user.name "syntax-bot"
-          git config user.email "syntax@bot.com"
-          sed -i -E "s/ghcr.io\/stamford-syntax-club\/stamfordcenter-frontend.*$/ghcr.io\/stamford-syntax-club\/stamfordcenter-frontend:${GITHUB_SHA}/" stamfordcenter/docker-compose.dev.yaml
-          git add stamfordcenter/docker-compose.dev.yaml
-          git commit -m "🤖 change docker image version to ${GITHUB_SHA}"
-          git push origin deploy/frontend-${GITHUB_SHA}
+            - name: change image tag
+              run: |
+                  git config user.name "syntax-bot"
+                  git config user.email "syntax@bot.com"
+                  sed -i -E "s/ghcr.io\/stamford-syntax-club\/stamfordcenter-frontend.*$/ghcr.io\/stamford-syntax-club\/stamfordcenter-frontend:${GITHUB_SHA}/" stamfordcenter/docker-compose.dev.yaml
+                  git add stamfordcenter/docker-compose.dev.yaml
+                  git commit -m "🤖 [CENTER-FRONTEND-DEV] change docker image version to ${GITHUB_SHA}"
+                  git push origin deploy/frontend-${GITHUB_SHA}
