--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
 		"@mantine/notifications": "^7.1.7",
 		"@mantine/nprogress": "^7.1.7",
 		"@mantine/spotlight": "^7.1.7",
-		"@types/node": "20.8.9",
-		"@types/react": "^18.2.33",
-		"@types/react-dom": "^18.2.14",
+		"@sentry/nextjs": "^7.76.0",
+		"@types/node": "20.8.2",
+		"@types/react": "18.2.25",
+		"@types/react-dom": "18.2.10",
 		"autoprefixer": "10.4.16",
 		"dayjs": "^1.11.10",
 		"eslint": "8.52.0",
