--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
 		"@mantine/nprogress": "^7.1.7",
 		"@mantine/spotlight": "^7.1.7",
 		"@types/node": "20.8.2",
-		"@types/react": "18.2.25",
-		"@types/react-dom": "18.2.10",
+		"@types/react": "^18.2.33",
+		"@types/react-dom": "^18.2.14",
 		"autoprefixer": "10.4.16",
 		"dayjs": "^1.11.10",
 		"eslint": "8.50.0",
-		"eslint-config-next": "13.5.4",
-		"next": "13.5.4",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"eslint-config-next": "^14.0.0",
+		"next": "^14.0.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
 		"sharp": "^0.32.6",
 		"swr": "^2.2.4",
