change to github actor

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -53,8 +53,7 @@ jobs:
 
             - name: change image tag
               run: |
-                  git config user.name "syntax-bot"
-                  git config user.email "syntax@bot.com"
+                  git config user.name "${{ github.actor }}"
                   sed -i -E "s/ghcr.io\/stamford-syntax-club\/stamfordcenter-frontend.*$/ghcr.io\/stamford-syntax-club\/stamfordcenter-frontend:${GITHUB_SHA}/" stamfordcenter/docker-compose.dev.yaml
                   git add stamfordcenter/docker-compose.dev.yaml
                   git commit -m "🤖 [CENTER-FRONTEND-DEV] change docker image version to ${GITHUB_SHA}"
