hotfix: configure git email to fix pipeline

--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -39,6 +39,7 @@ jobs:
             - name: change prod image tag
               run: |
                   git config user.name "${{ github.actor }}"
+                  git config user.email "${{ github.actor }}@stamford.dev"
                   sed -i -E "s/ghcr.io\/stamford-syntax-club\/stamfordcenter-frontend.*$/ghcr.io\/stamford-syntax-club\/stamfordcenter-frontend:${{ inputs.deploy-tag }}/" stamfordcenter/docker-compose.prod.yaml
                   git add stamfordcenter/docker-compose.prod.yaml
                   git commit -m "🤖 [CENTER-FRONTEND-PROD] change docker image version to ${{ inputs.deploy-tag }}"
