--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -55,6 +55,7 @@ jobs:
             - name: change image tag
               run: |
                   git config user.name "${{ github.actor }}"
+                  git config user.email "${{ github.actor }}@stamford.dev"
                   sed -i -E "s/ghcr.io\/stamford-syntax-club\/stamfordcenter-frontend.*$/ghcr.io\/stamford-syntax-club\/stamfordcenter-frontend:${GITHUB_SHA}/" stamfordcenter/docker-compose.dev.yaml
                   git add stamfordcenter/docker-compose.dev.yaml
                   git commit -m "🤖 [CENTER-FRONTEND-DEV] change docker image version to ${GITHUB_SHA}"
