--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
 		"@emotion/server": "^11.11.0",
+		"@mantine/carousel": "^7.2.1",
 		"@mantine/core": "^7.2.1",
 		"@mantine/dates": "^7.2.1",
 		"@mantine/form": "^7.2.1",
@@ -26,6 +27,7 @@
 		"@types/react-dom": "18.2.15",
 		"autoprefixer": "10.4.16",
 		"dayjs": "^1.11.10",
+		"embla-carousel-react": "^7.1.0",
 		"eslint": "8.53.0",
 		"eslint-config-next": "14.0.1",
 		"next": "14.0.1",
