--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@types/react-dom": "18.2.15",
 		"autoprefixer": "10.4.16",
 		"dayjs": "^1.11.10",
+		"embla-carousel-autoplay": "^7.1.0",
 		"embla-carousel-react": "^7.1.0",
 		"eslint": "8.53.0",
 		"eslint-config-next": "14.0.1",
